# Application-of-Deep-learning-image

./: .gitignore  README.md  pyproject.toml
Data/: inflation.csv  naip_occupancy_pixel_ratio.csv  naip_occupancy_pixel_ratio_clean.csv  naip_occupancy_results.csv  normalized_gdp.csv  walmart_annual_revenue.csv  walmart_coordinates.csv  walmart_instore_deflator.csv  walmart_quarterly_revenue.csv
Data/walmart-1/: README.dataset.txt  README.roboflow.txt  data.yaml
Data/walmart-1/test/labels/: WhatsApp-Video-2022-11-20-at-13_28_05_mp4-17_jpg.rf.4fe0e9c2f74d3136c6478242021f42d1.txt  WhatsApp-Video-2022-11-20-at-13_28_05_mp4-21_jpg.rf.065ffc26011e06e2b9185beb455b7187.txt  WhatsApp-Video-2022-11-20-at-13_28_05_mp4-36_jpg.rf.66534d2d552718b630b28b91f9ddfb17.txt  WhatsApp-Video-2022-11-20-at-13_28_05_mp4-38_jpg.rf.f930a727814da2f50b0c093b0d1d9307.txt  WhatsApp-Video-2022-11-20-at-13_28_05_mp4-39_jpg.rf.20320e83515b9e967345c24b89b6cc7f.txt  WhatsApp-Video-2022-11-20-at-13_28_05_mp4-44_jpg.rf.1f38a63ed29c58114752acdaec6f923a.txt  WhatsApp-Video-2022-11-20-at-13_28_05_mp4-50_jpg.rf.7400988423e1cf2ba466d87dca7cf7bc.txt  WhatsApp-Video-2022-11-20-at-13_28_05_mp4-52_jpg.rf.1504237f746b40ce6eb276be9f4a1c16.txt  youtube-0_jpg.rf.350ae8f011e3d257ead6f50499a6eda0.txt  (+1 more)
notebooks/: batch_mask_creator.py  data_collection.ipynb  data_collection_casas.ipynb  exploratory_model.ipynb  naip_inference.ipynb  parking_image_colection.ipynb  predicting_price.ipynb  walmart_coordenates.ipynb  walmart_images.ipynb  walmart_sales.ipynb
notebooks/analysis/: correlation_analysis.ipynb  image_cleaning.ipynb  naip_inference.ipynb  naip_inference_pixel_ratio.ipynb  parquing_vs_pib.ipynb  sales_occupancy_correlation.ipynb
notebooks/data_collection/: normalized_gdp.ipynb  parking_image_colection.ipynb  walmart_coordenates.ipynb  walmart_coordinates.ipynb  walmart_images.ipynb  walmart_sales.ipynb
notebooks/model/: exploratory_model.ipynb  fine_tuning_model.ipynb
notebooks/preprocessing/: batch_mask_creator.py
(+47 files in other folders)
